# Generative-Memory

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GUIDE.md  LICENSE-APACHE  README.md  fix_paths.py  run_all_benchmarks.py  test_persist.gvm
Tests/: adversarial_gauntlet.py  adversarial_sweep.py  audit_integrity.py  comprehensive_test.py  functional_poc.py  functional_pytorch.py  run_tests.py  stress_algebraic.py  stress_aof_massive.py  stress_collision_gauntlet.py  stress_multithreading.py  stress_recursion.py  test_layering.py  triple_check.py  verify_precision.py
benchmarks/: suite_6_cache_miss.c  suite_7_vram_limit.py  suite_8_io_disk_race.py  test_suite_1_physics.py  test_suite_2_database.py  test_suite_3_pytorch.py  test_suite_4_media.py  vfs_bench.c  vfs_vs_nvme.py
bindings-c/: gielis_kernel.cu  gmem_kernel.cu  gmem_native.c  gmem_native.h
bindings-python/: pyproject.toml  requirements.txt
bindings-python/gmem/: USAGE_GUIDE.md  __init__.py  allocator.py  archetype.py  autoencoder.py  bridge.py  core.py  cuda.py  cuda_gielis.py  decorator.py  filter.py  fourier.py  hashing.py  hdc.py  holographic.py  koopman.py  manager.py  media_bridge.py  monotonic.py  morph.py  ntt.py  number_theory.py  overlay.py  persistence.py  pytorch.py  rs_bridge.py  sidechannel.py  sketch.py  trinity.py  vrns.py  zmask.py
bindings-python/gmem/pytorch/: __init__.py  function.py  linear.py
core-rust/: Cargo.toml  py_integration.md
core-rust/benches/: perf_vrns.rs
core-rust/src/: context.rs  ffi.rs  lib.rs
core-rust/src/driver/: mod.rs  persistence.rs
core-rust/src/math/: bijective.rs  field_ntt.rs  gielis.rs  hashing.rs  holographic.rs  koopman.rs  mod.rs
core-rust/src/physical/: mod.rs  overlay.rs  zmask.rs
core-rust/src/topology/: anchor.rs  mirror.rs  mod.rs  monotonic.rs  morph.rs  space_filling.rs
core-rust/src/vrns/: mod.rs  scalar_synth.rs
demos/: demo_bandwidth_efficiency.c  demo_chaos_stability.c  demo_generative_ram.c  demo_honeypot.c  demo_ipc_coherence.c  demo_reversibility.c  run_demos.bat
docs/: ARCHITECTURE_AND_TESTING.md  Dependencies and Decorators.md  GROUNDING.md  Generative Memory to Python.md
include/: gmem.h  gmem_aro.h  gmem_filter.h  gmem_manager.h  gmem_net.h  gmem_trinity.h
python/: gvm.py
scripts/: package_release.bat  zip_release.ps1
src/: archetype_audit.c  aro_bench.c  aro_final_audit.c  aro_honest_bench.c  gmem.c  gmem_alloc.c  gmem_archetype.c  gmem_aro.c  gmem_bridge.c  gmem_diag.c  gmem_filter_block.c  gmem_filter_json.c  gmem_internal.h  gmem_manager.c  gmem_net.c  gmem_os.h  gmem_trinity.c  gmem_vrns.c  gmem_vrns.h  gmem_winfsp.c  mesh_sync_audit.c  mirroring_audit.c  morph_audit.c  multitenant_audit.c  net_discovery_audit.c  persistence_audit.c  raw_bench.c  test_mesh_listen.c  test_mesh_write.c  test_persist.c
tests/: archetype_audit.py  aro_bench.py  aro_final_audit.py  aro_honest_bench.py  benchmark_heavy.py  benchmark_multithreaded.py  demo_utility.py  gauntlet_exascale_stress.py  gauntlet_material_stress.py  gauntlet_mesh_multitenant_stress.py  gauntlet_morph_stress.py  gmem_filter_test.py  gmem_search_test.py  gmem_test.py  hardening_benchmark.py  mesh_sync_audit.py  mirroring_audit.py  morph_audit.py  multitenant_audit.py  net_discovery_audit.py  overlay_coherence.py  persistence_audit.py  run_tests.bat  system_integration_audit.py  system_utility_test.py  test_alloc_safe.c  test_archetype_dyn.c  test_aro_ast.c  test_persistence_mesh.py  vfs_exascale_verify.py  vfs_verify.py
tools/: virtual_json_stream.py  virtual_raw_drive.py  (+1 more)
(+31 files in other folders)
